# namagiri

./: Cargo.toml  README.md
benches/: flops.rs
examples/: p6e1.rs
src/: flquire.rs  lib.rs  posit.rs  quire.rs
tests/: flquire_test.rs  posit_test.rs  quire_test.rs
